[tool.poetry]
name = "py-scripts"
version = "0.1.0"
description = "The Python script that I daily used"
authors = ["shrektan <shrektan@126.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
pandas = "^2.1.4"
argparse = "^1.4.0"
scipy = "^1.11.4"
numpy = "^1.26.2"
logging = "^0.4.9.6"
PyPDF2 = "^3.0.1"
pathlib = "^1.0.1"
XlsxWriter = "^3.1.9"

[tool.poetry.group.dev.dependencies]
pip = "^23.3.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"
