[tool.poetry]
name = "py-scripts"
version = "0.1.0"
description = "The Python script that I daily used"
authors = ["shrektan <shrektan@126.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
pandas = "^2.1.4"
argparse = "^1.4.0"
scipy = "^1.11.4"
numpy = "^1.26.2"
logging = "^0.4.9.6"
PyPDF2 = "^3.0.1"
pathlib = "^1.0.1"
XlsxWriter = "^3.1.9"
sqlalchemy = "^2.0.23"
shiny = "^0.6.0"
pdfreader = "^0.1.12"
polars = "^0.19.19"
pyarrow = "^14.0.1"

[tool.poetry.group.dev.dependencies]
pip = "^23.3.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipython = "^8.18.1"
ipykernel = "^6.27.1"
ruff = "^0.1.8"
mypy = "^1.7.1"


[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0.10"
pandas-stubs = "^2.1.4.231218"
types-sqlalchemy = "^1.4.53.38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"
